force-app/main/default/objects/Donation_Component__c/Donation_Component__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Donation Component</label>
</CustomObject>