force-app/main/default/objects/Donation_Component__c/fields/Failure_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Failure_Redirect__c</fullName>
    <label>Failure Redirect</label>
    <required>true</required>
    <type>Url</type>
</CustomField>