force-app/main/default/objects/Donation_Component__c/fields/Stripe_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_API_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Stripe API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>