force-app/main/default/objects/Donation_Component__c/fields/Stripe_Public_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Public_Api_Key__c</fullName>
    <label>Stripe Public Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>