force-app/main/default/objects/Donation_Component__c/fields/Success_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Success_Redirect__c</fullName>
    <label>Success Redirect</label>
    <required>true</required>
    <type>Url</type>
</CustomField>